// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FeeService should get the fees for ARK 1`] = `
Object {
  "avg": "9878740",
  "max": "10000000",
  "min": "3627425",
  "static": "10000000",
}
`;

exports[`FeeService should get the fees for ARK 2`] = `
Object {
  "avg": "0",
  "max": "500000000",
  "min": "0",
  "static": "500000000",
}
`;

exports[`FeeService should get the fees for ARK 3`] = `
Object {
  "avg": "0",
  "max": "2500000000",
  "min": "0",
  "static": "2500000000",
}
`;

exports[`FeeService should get the fees for ARK 4`] = `
Object {
  "avg": "52995956",
  "max": "100000000",
  "min": "1000000",
  "static": "100000000",
}
`;

exports[`FeeService should get the fees for ARK 5`] = `
Object {
  "avg": "0",
  "max": "500000000",
  "min": "0",
  "static": "500000000",
}
`;

exports[`FeeService should get the fees for ARK 6`] = `
Object {
  "avg": "62128036",
  "max": "500000000",
  "min": "10000000",
  "static": "500000000",
}
`;

exports[`FeeService should get the fees for ARK 7`] = `
Object {
  "avg": "10000000",
  "max": "10000000",
  "min": "10000000",
  "static": "10000000",
}
`;

exports[`FeeService should get the fees for ARK 8`] = `
Object {
  "avg": "0",
  "max": "2500000000",
  "min": "0",
  "static": "2500000000",
}
`;

exports[`FeeService should get the fees for ARK 9`] = `
Object {
  "avg": "10000000",
  "max": "10000000",
  "min": "10000000",
  "static": "10000000",
}
`;

exports[`FeeService should get the fees for ARK 10`] = `
Object {
  "avg": "0",
  "max": "0",
  "min": "0",
  "static": "0",
}
`;

exports[`FeeService should get the fees for ARK 11`] = `
Object {
  "avg": "0",
  "max": "0",
  "min": "0",
  "static": "0",
}
`;

exports[`FeeService should get the fees for BIND 1`] = `
Object {
  "avg": "0",
  "max": "10000000",
  "min": "0",
  "static": "10000000",
}
`;

exports[`FeeService should get the fees for BIND 2`] = `
Object {
  "avg": "0",
  "max": "50000000",
  "min": "0",
  "static": "50000000",
}
`;

exports[`FeeService should get the fees for BIND 3`] = `
Object {
  "avg": "0",
  "max": "25000000000",
  "min": "0",
  "static": "25000000000",
}
`;

exports[`FeeService should get the fees for BIND 4`] = `
Object {
  "avg": "0",
  "max": "100000000",
  "min": "0",
  "static": "100000000",
}
`;

exports[`FeeService should get the fees for BIND 5`] = `
Object {
  "avg": "0",
  "max": "50000000",
  "min": "0",
  "static": "50000000",
}
`;

exports[`FeeService should get the fees for BIND 6`] = `
Object {
  "avg": "0",
  "max": "0",
  "min": "0",
  "static": "0",
}
`;

exports[`FeeService should get the fees for BIND 7`] = `
Object {
  "avg": "25000000",
  "max": "25000000",
  "min": "25000000",
  "static": "25000000",
}
`;

exports[`FeeService should get the fees for BIND 8`] = `
Object {
  "avg": "0",
  "max": "1000000000",
  "min": "0",
  "static": "1000000000",
}
`;

exports[`FeeService should get the fees for BIND 9`] = `
Object {
  "avg": "0",
  "max": "0",
  "min": "0",
  "static": "0",
}
`;

exports[`FeeService should get the fees for BIND 10`] = `
Object {
  "avg": "0",
  "max": "0",
  "min": "0",
  "static": "0",
}
`;

exports[`FeeService should get the fees for BIND 11`] = `
Object {
  "avg": "0",
  "max": "0",
  "min": "0",
  "static": "0",
}
`;
